# stuffless

./: pyproject.toml
src/: common_model.py  login_screen.py  main.py  stuffless_db_init.py  stuffless_model.py  user_model.py
